--- a/colors.html
+++ b/colors.html
@@ -6,7 +6,7 @@
     <body>
             <div class="inputs">
                 <div class="colpal">
-                R<input type="text" id="a" value="0">
+                R<input type="text" id="a" min="0" max="255" step=".01" value="0">
                 <div class="slidecontainer">
                     <input type="range" min="0" max="255" value="0"  class="slider" id="aa">
                 </div>
@@ -105,8 +105,7 @@
             </div>
 
 <div id="color-picker">
-  <canvas id="color-block" height="150" width="150"></canvas>
-  <canvas id="color-strip" height="150" width="30"></canvas>
+  <canvas id="color-block" height="150" width="150"></canvas><canvas id="color-strip" height="150" width="30"></canvas>
 </div>
         <script src="cols.js"></script>
         </body>
